@@ -36,7 +36,7 @@ vars = {
 
   # Dependencies' revisions to use:
   'chromium_rev': '38580',
-  'google-url_rev': '123',
+  'google-url_rev': '121',
   'gtest_rev': '359',
   'gyp_rev': '781',
   'icu_rev': '37341',
